--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,31 @@
     <string name="forreste_kort">Forreste kort</string>
     <string name="skjulte_kort">Skjulte kort</string>
     <string name="kort">Kort</string>
+
+    <string-array name="test">
+
+        <item>Test1</item>
+        <item>Test2</item>
+        <item>Test3</item>
+        <item>Test1</item>
+        <item>Test2</item>
+        <item>Test3</item>
+        <item>Test1</item>
+        <item>Test2</item>
+        <item>Test3</item>
+        <item>Test1</item>
+        <item>Test2</item>
+        <item>Test3</item>
+        <item>Test1</item>
+        <item>Test2</item>
+        <item>Test3</item>
+        <item>Test1</item>
+        <item>Test2</item>
+        <item>Test3</item>
+        <item>Test1</item>
+        <item>Test2</item>
+        <item>Test3</item>
+
+    </string-array>
+
 </resources>
